Fix elements animation when visible on homepage (play whole timeline per section, not per element)

--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -21,23 +21,7 @@
 {
 	@extend %button;
 
-	&--header
-	{
-		position: absolute;
-		bottom: 13rem;
-		left: 50%;
-		// margin-top: (180/$base-font-size-unitless) * 1em;
-		background-color: transparent;
-		border-color: map-get($colors, white);
-		transform: translate(-50%, 0);
-
-		@include from('sm')
-		{
-			bottom: percentage(180/1600);
-		}
-	}
-
-	&--table
+	&--transparent
 	{
 		background-color: transparent;
 	}
